# make-hdr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/actions/read-version/: action.yml
.github/workflows/: ci.yml
cmake/: FindNuke.cmake
lib/win/: blas.lib  libf2c.lib  ofxSupport.lib
source/: effect.cpp  effect.h  processor.h  resources.h  solve.h  solver.h
test/: room.nk  room.ntp
